--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,8 +2,9 @@
 <resources>
 
     <string name="app_name">Xposed Installer</string>
-    <string name="tabInstall">Install framework</string>
+    <string name="tabInstall">Framework</string>
     <string name="tabModules">Modules</string>
+    <string name="tabNativeLibs">Libraries</string>
     <string name="yes">yes</string>
     <string name="no">no</string>
     <string name="installerDescription">Here you can install the <b>Xposed</b> framework.
@@ -16,6 +17,7 @@
     <string name="latestVersion">latest</string>
     <string name="cleanup">Clean up (delete settings etc.)</string>
     <string name="versions">Versions:</string>
+    <string name="soft_reboot_testmode">Soft reboot <small>(with test-mode for native libraries)</small></string>
     <string name="reboot">Reboot</string>
     <string name="areyousure">Are you sure?</string>
     <string name="module_is_not_activated_yet">Xposed module is not activated yet</string>
@@ -25,5 +27,9 @@
     <string name="phone_not_compatible">Your phone is not compatible.\nXposed works only for ARM processors.</string>
     <string name="no_min_version_specified">This module does not specify the Xposed version it needs.</string>
     <string name="warning_min_version_too_low" formatted="false">This module was created for Xposed version %1s, but due to incompatible changes in version %2s, it has been disabled.</string>
+    <string name="lib_default">default (don\'t replace)</string>
+    <string name="lib_replace_testonly">Replace this library only after a soft restart in test-mode from this app (useful to check if the library is compatible)</string>
+    <string name="lib_replace_always">Always replace this library on boot (as long as Xposed is installed)</string>
+    <string name="lib_replace_title">Replace in test-mode only</string>
 
 </resources>
