--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="reboot">Reboot</string>
     <string name="areyousure">Are you sure?</string>
     <string name="module_is_not_activated_yet">Xposed module is not activated yet</string>
+    <string name="module_empty_description">(no description provided)</string>
+    <string name="module_no_ui">This module does not provide a user interface</string>
     <string name="no_xposed_modules_found">No Xposed modules were found!</string>
     <string name="xposed_module_list_updated">Xposed module list was updated\nChanges will become active on reboot</string>
     <string name="warning_xposed_min_version">This module requires a newer Xposed version (%s) and thus cannot be activated.</string>
