--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="install">Install/Update</string>
     <string name="uninstall">Uninstall (restore app_process)</string>
     <string name="installedVersion">active</string>
-    <string name="none">none</string>
+    <string name="none">---</string>
     <string name="latestVersion">bundled</string>
     <string name="cleanup">Clean up (complete removal of the framework)</string>
     <string name="versions">Versions:</string>
@@ -25,7 +25,7 @@
     <string name="no_xposed_modules_found">No Xposed modules were found!</string>
     <string name="xposed_module_list_updated">Xposed module list was updated\nChanges will become active on reboot</string>
     <string name="warning_xposed_min_version">This module requires a newer Xposed version (%s) and thus cannot be activated.</string>
-    <string name="phone_not_compatible">Xposed is not (yet) compatible with Android SDK version %d or your processor (only ARM is supported).</string>
+    <string name="phone_not_compatible" formatted="false">Xposed is not (yet) compatible with Android SDK version %d or your processor architecture (%s).</string>
     <string name="not_tested_but_compatible">Xposed has not been tested with Android SDK version %d, but it seems to be compatible. You can try installing it if you feel adventurous.</string>
     <string name="no_min_version_specified">This module does not specify the Xposed version it needs.</string>
     <string name="warning_min_version_too_low" formatted="false">This module was created for Xposed version %1s, but due to incompatible changes in version %2s, it has been disabled.</string>
