save translator names in strings.xml
Not used at the moment, but might be displayed somewhere later.
For now, this is just to keep track of how translated what.

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -28,4 +28,5 @@
     <string name="not_tested_but_compatible">Xposed не была протестирована с Android SDK версии %d, но мне кажется, могут быть совместимы. Вы можете попробовать его установить, если вы хотите приключений.</string>
     <string name="no_min_version_specified">Этот модуль не указал версию Xposed, в которой он нуждается.</string>
     <string name="warning_min_version_too_low" formatted="false">Этот модуль был создан для Xposed %1s версии, но из-за несовместимых изменений в %2s версии он была отключен.</string>
+    <string name="translator">jack_nuclear</string>
 </resources>
