--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -24,9 +24,9 @@
     <string name="no_xposed_modules_found">Xposed модули не найдены!</string>
     <string name="xposed_module_list_updated">Cписок модулей Xposed был обновлен\nИзменения станут активными при перезагрузке</string>
     <string name="warning_xposed_min_version">Этот модуль требует более новой версии Xposed (%s) и не может быть активирован.</string>
-    <string name="phone_not_compatible" formatted="false">Xposed (пока) не совместим с версией Android SDK %d или архитектурой процессора (%s).</string>
+    <string name="phone_not_compatible">Xposed (пока) не совместим с версией Android SDK %1$d или архитектурой процессора (%2$s).</string>
     <string name="not_tested_but_compatible">Xposed не была протестирована с Android SDK версии %d, но мне кажется, могут быть совместимы. Вы можете попробовать его установить, если вы хотите приключений.</string>
     <string name="no_min_version_specified">Этот модуль не указал версию Xposed, в которой он нуждается.</string>
-    <string name="warning_min_version_too_low" formatted="false">Этот модуль был создан для Xposed %1s версии, но из-за несовместимых изменений в %2s версии он была отключен.</string>
+    <string name="warning_min_version_too_low">Этот модуль был создан для Xposed %1$s версии, но из-за несовместимых изменений в %2$s версии он была отключен.</string>
     <string name="translator">jack_nuclear</string>
 </resources>
