--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,11 +25,11 @@
     <string name="no_xposed_modules_found">No Xposed modules were found!</string>
     <string name="xposed_module_list_updated">Xposed module list was updated\nChanges will become active on reboot</string>
     <string name="warning_xposed_min_version">This module requires a newer Xposed version (%s) and thus cannot be activated.</string>
-    <string name="phone_not_compatible" formatted="false">Xposed is not (yet) compatible with Android SDK version %d or your processor architecture (%s).</string>
+    <string name="phone_not_compatible">Xposed is not (yet) compatible with Android SDK version %1$d or your processor architecture (%2$s).</string>
     <string name="not_tested_but_compatible">Xposed has not been tested with Android SDK version %d, but it seems to be compatible. You can try installing it if you feel adventurous.</string>
     <string name="no_min_version_specified">This module does not specify the Xposed version it needs.</string>
-    <string name="warning_min_version_too_low" formatted="false">This module was created for Xposed version %1s, but due to incompatible changes in version %2s, it has been disabled.</string>
-    <string name="app_process">app_process</string>
-    <string name="xposedbridge">XposedBridge.jar</string>
+    <string name="warning_min_version_too_low">This module was created for Xposed version %1$s, but due to incompatible changes in version %2$s, it has been disabled.</string>
+    <string name="app_process" translatable="false">app_process</string>
+    <string name="xposedbridge" translatable="false">XposedBridge.jar</string>
     <string name="translator"></string>
 </resources>
