--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -22,9 +22,9 @@
     <string name="no_xposed_modules_found">没有发现任何 Xposed 应用模块!</string>
     <string name="xposed_module_list_updated">"Xposed 应用模块清单已更新\n重启后即可选用"</string>
     <string name="warning_xposed_min_version">此应用模块需要更新核心框架版本 (%s) 所以当前不能启用.</string>
-    <string name="phone_not_compatible" formatted="false">Xposed 还没有兼容正使用中的 Android SDK %d 版本 或你的处理器架构(%s).</string>
+    <string name="phone_not_compatible">Xposed 还没有兼容正使用中的 Android SDK %1$d 版本 或你的处理器架构(%2$s).</string>
     <string name="not_tested_but_compatible">Xposed 没有进行与 Android SDK 版本 %d 兼容测试,但它似乎能够使用. 如果你确定相关风险,可以尝试安装.</string>
     <string name="no_min_version_specified">此模块没有指定使用的核心框架版本.</string>
-    <string name="warning_min_version_too_low" formatted="false">此模块专为 Xposed %1s 版本而设, 由于系统已更新至 %2s版本, 所以服务当前已被禁用. </string>
+    <string name="warning_min_version_too_low">此模块专为 Xposed %1$s 版本而设, 由于系统已更新至 %2$s版本, 所以服务当前已被禁用. </string>
     <string name="translator">burstlam</string>
 </resources>
