adding a popup menu to modules list with two option one allows user go to app info and another one to uninstall the module.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -32,4 +32,6 @@
     <string name="app_process" translatable="false">app_process</string>
     <string name="xposedbridge" translatable="false">XposedBridge.jar</string>
     <string name="translator"></string>
+    <string name="configuration">Configuration</string>
+    <string name="uninstall_module">Uninstall</string>    
 </resources>
