Use Android permission system
This is to allow seamless installation of modules (skipping the need to
go Xposed Installer to enable a module after installation).

This feature is backward compatible: modules without the permission
specified will require the manual activation of module.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -32,4 +32,6 @@
     <string name="app_process" translatable="false">app_process</string>
     <string name="xposedbridge" translatable="false">XposedBridge.jar</string>
     <string name="translator"></string>
+    <string name="xposed_permission_group">Xposed Framework Permission</string>
+    <string name="xposed_permission">Allow application to use Xposed to hook to existing applications (including system) codes.</string>
 </resources>
