--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="tabInstall">Framework</string>
     <string name="tabModules">Modules</string>
     <string name="tabDownload">Download</string>
+    <string name="tabSettings">Settings</string>
     <string name="yes">yes</string>
     <string name="no">no</string>
     <string name="installerDescription">Here you can install the <b>Xposed</b> framework.
