added proper section descriptions and reordered strings a bit

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- General/various strings -->
     <string name="app_name">Xposed Installer</string>
-    <string name="tabInstall">Framework</string>
-    <string name="tabModules">Modules</string>
-    <string name="tabDownload">Download</string>
-    <string name="tabSettings">Settings</string>
     <string name="menuSearch">Search</string>
-    <string name="menuSortStatus">Sort by Status</string>
-    <string name="menuSortDate">Sort by Date</string>
     <string name="yes">yes</string>
     <string name="no">no</string>
-    <string name="installerDescription">Here you can install the <b>Xposed</b> framework.
-		It is the base for modules that can change the behaviour and look of your Android phone.
-		For more information please see <a href="http://forum.xda-developers.com/showthread.php?t=1574401">here</a>.</string>
+    <string name="translator"></string>
+
+    <!-- Welcome screen / main sections -->
+    <string name="welcome">Welcome to the <b>Xposed Installer</b>!\nPlease choose what you want to do:</string>
+    <string name="tabInstall">Framework</string>
+    <string name="tabInstallDescription">Here you can manage the Xposed framework, which is required for any modules to work.</string>
+    <string name="tabModules">Modules</string>
+    <string name="tabModulesDescription">The framework itself doesn\'t add any functionality. You need modules for that. In this section you can activate modules after you have installed them.</string>
+    <string name="tabDownload">Download</string>
+    <string name="tabDownloadDescription">This section gives you access to a repository of modules, so you can search and download the ones you like and keep them up to date.</string>
+    <string name="welcome_framework_update_available">An update for the Xposed framework is available</string>
+    <string name="welcome_update_available">One or more update(s) for modules available</string>
+    <string name="tabSettings">Settings</string>
+    <string name="tabSettingsDescription">Go to this section to configure the Xposed Installer and framework.</string>
+
+    <!-- Installer tab -->
     <string name="install">Install/Update</string>
     <string name="uninstall">Uninstall (restore app_process)</string>
     <string name="installedVersion">active</string>
@@ -21,24 +29,28 @@
     <string name="latestVersion">bundled</string>
     <string name="cleanup">Clean up (complete removal of the framework)</string>
     <string name="versions">Versions:</string>
+    <string name="app_process" translatable="false">app_process</string>
+    <string name="xposedbridge" translatable="false">XposedBridge.jar</string>
     <string name="soft_reboot">Soft reboot</string>
     <string name="reboot">Reboot</string>
     <string name="areyousure">Are you sure?</string>
+    <string name="phone_not_compatible">Xposed is not (yet) compatible with Android SDK version %1$d or your processor architecture (%2$s).</string>
+    <string name="not_tested_but_compatible">Xposed has not been tested with Android SDK version %d, but it seems to be compatible. You can try installing it if you feel adventurous.</string>
+
+    <!-- Modules tab -->
     <string name="module_is_not_activated_yet">Xposed module is not activated yet</string>
     <string name="module_empty_description">(no description provided)</string>
     <string name="module_no_ui">This module does not provide a user interface</string>
     <string name="no_xposed_modules_found">No Xposed modules were found!</string>
     <string name="xposed_module_list_updated">Xposed module list was updated\nChanges will become active on reboot</string>
     <string name="warning_xposed_min_version">This module requires a newer Xposed version (%s) and thus cannot be activated.</string>
-    <string name="phone_not_compatible">Xposed is not (yet) compatible with Android SDK version %1$d or your processor architecture (%2$s).</string>
-    <string name="not_tested_but_compatible">Xposed has not been tested with Android SDK version %d, but it seems to be compatible. You can try installing it if you feel adventurous.</string>
     <string name="no_min_version_specified">This module does not specify the Xposed version it needs.</string>
     <string name="warning_min_version_too_low">This module was created for Xposed version %1$s, but due to incompatible changes in version %2$s, it has been disabled.</string>
-    <string name="app_process" translatable="false">app_process</string>
-    <string name="xposedbridge" translatable="false">XposedBridge.jar</string>
-    <string name="welcome_framework_update_available">An update for the Xposed framework is available</string>
-    <string name="welcome_update_available">One or more update(s) for modules available</string>
+
+    <!-- Download tab -->
     <string name="branch_display">(%s branch)</string>
+    <string name="menuSortStatus">Sort by Status</string>
+    <string name="menuSortDate">Sort by Date</string>
     <string name="download_section_framework">Framework</string>
     <string name="download_section_update_available">Update available</string>
     <string name="download_section_installed">Installed</string>
@@ -47,5 +59,5 @@
     <string name="download_section_7d">Last 7 days</string>
     <string name="download_section_30d">Last 30 days</string>
     <string name="download_section_older">More than 30 days ago</string>
-    <string name="translator"></string>
+
 </resources>
